[gd_scene load_steps=21 format=2]

[ext_resource path="res://sprites/credits/credits0006.png" type="Texture" id=1]
[ext_resource path="res://sprites/credits/credits0005.png" type="Texture" id=2]
[ext_resource path="res://sprites/credits/credits0009.png" type="Texture" id=3]
[ext_resource path="res://sprites/credits/credits0010.png" type="Texture" id=4]
[ext_resource path="res://sprites/credits/credits0011.png" type="Texture" id=5]
[ext_resource path="res://sprites/credits/credits0001.png" type="Texture" id=6]
[ext_resource path="res://sprites/credits/credits0002.png" type="Texture" id=7]
[ext_resource path="res://sprites/credits/credits0007.png" type="Texture" id=8]
[ext_resource path="res://sprites/credits/credits0000.png" type="Texture" id=9]
[ext_resource path="res://sprites/credits/credits0003.png" type="Texture" id=10]
[ext_resource path="res://sprites/credits/credits0004.png" type="Texture" id=11]
[ext_resource path="res://sprites/credits/credits0008.png" type="Texture" id=12]
[ext_resource path="res://sprites/credits/credits0014.png" type="Texture" id=13]
[ext_resource path="res://sprites/credits/credits0015.png" type="Texture" id=14]
[ext_resource path="res://sprites/credits/credits0012.png" type="Texture" id=15]
[ext_resource path="res://sprites/credits/credits0013.png" type="Texture" id=16]
[ext_resource path="res://notosans-reg.tres" type="DynamicFont" id=17]
[ext_resource path="res://Credits.gd" type="Script" id=18]
[ext_resource path="res://sounds/Soar.wav" type="AudioStream" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 8 ), ExtResource( 12 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[node name="Credits" type="AnimatedSprite"]
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
frame = 1
playing = true
centered = false
script = ExtResource( 18 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="."]
margin_left = 307.669
margin_top = 243.992
margin_right = 422.669
margin_bottom = 257.992
text = "Writing and Music"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 407.282
margin_top = 257.992
margin_right = 522.282
margin_bottom = 284.992
custom_fonts/font = ExtResource( 17 )
text = "Sibyl"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 36.8112
margin_top = 257.992
margin_right = 151.811
margin_bottom = 287.992
custom_fonts/font = ExtResource( 17 )
text = "AstroPippin"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="."]
margin_left = 85.8926
margin_top = 243.992
margin_right = 200.893
margin_bottom = 257.992
text = "Code and Art"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="."]
margin_left = 189.311
margin_top = 280.518
margin_right = 304.311
margin_bottom = 294.518
text = "Made with Godot"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )
autoplay = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
